# ARAPPAV

./: .gitignore  README.md  claude-code-source.sh  pyproject.toml  requirements.lock.txt  rollout_analysis.md
configs/: default.yaml
configs/data/: corpus.yaml
configs/models/: perturber.yaml  verifier.yaml
configs/reward/: reward.yaml
configs/training/: dpo.yaml  grpo.yaml
notebooks/: end_to_end_math.ipynb  explore_rollouts.ipynb
scripts/: run_eval.py  run_ingest.py  run_selfplay.py  run_single_rollout.py
src/arappav/: __init__.py
src/arappav/data/: __init__.py  chunking.py  dataset.py  ingest.py  ingest_math.py
src/arappav/errors/: __init__.py  fuzzy.py  schema.py  schema_math.py  taxonomy.py  taxonomy_math.py
src/arappav/eval/: __init__.py  evaluate.py  metrics.py
src/arappav/models/: __init__.py  generation_utils.py  math_prompts.py  perturber.py  verifier.py
src/arappav/reward/: __init__.py  matcher.py  reward_fns.py
src/arappav/serving/: __init__.py  vllm_engine.py
src/arappav/training/: __init__.py  dpo_trainer.py  grpo_trainer.py  preference_builder.py  selfplay_loop.py
src/arappav/utils/: __init__.py  logging.py  parsing.py  seeding.py
tests/: __init__.py  test_matcher.py  test_reward_fns.py  test_round1_regressions.py  test_round2_fixes.py  test_round3_fixes.py  test_schema.py  test_selfplay_smoke.py
tests/fixtures/: round1_math_episodes.jsonl  round3_math_episodes.jsonl
