[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arappav"
version = "0.1.0"
description = "Adversarial Reward for Academic Paper Perturbation and Verification — self-play RL for error injection and detection."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "ARAPPAV Team" },
]
keywords = ["reinforcement-learning", "self-play", "llm", "adversarial", "academic-papers"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Do NOT list torch here: on Colab it's preinstalled and CUDA-matched
    # to the runtime already (torch 2.11.0+cu128 at time of writing).
    # Re-declaring/pinning it here invites the resolver to touch it.

    # Let trl's own [vllm] extra pick a vLLM version it actually supports.
    # DO NOT pin vllm separately here — trl==0.19.1 documents its tested
    # vLLM integration range as 0.10.2–0.12.x; a manually-pinned newer vllm
    # (e.g. 0.20.0, 0.23.0) breaks on renamed internals like
    # GuidedDecodingParams -> StructuredOutputsParams. See:
    # https://github.com/huggingface/trl/issues/4617
    "trl[vllm]==0.19.1",

    "transformers>=4.44.0,<5.0.0",
    "peft>=0.12.0,<0.14.0",
    "accelerate>=1.4.0,<2.0.0",
    "datasets>=3.0.0,<4.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "wandb>=0.17.0",
    "pyyaml>=6.0",
    "omegaconf>=2.3.0,<2.4.0",
    "hydra-core>=1.3.0,<1.4.0",
    "rich>=13.0.0",
    "numpy>=1.26.0,<3.0.0",
    "scikit-learn>=1.5.0",

    # torchao intentionally omitted: not required for basic GRPO/DPO
    # training, and recent versions (0.17.0) pull CUDA-13-linked CUTLASS
    # kernels (_C_cutlass_90a.abi3.so, _C_mxfp8...so) that conflict with
    # a CUDA-12 torch/vllm stack. Add back only if quantization is needed,
    # and re-verify the whole install from scratch when you do.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "isort>=5.13.0",
    "ruff>=0.5.0",
    "pre-commit>=3.7.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "bitsandbytes>=0.43.0",
]

[project.scripts]
arappav-ingest = "scripts.run_ingest:main"
arappav-selfplay = "scripts.run_selfplay:main"
arappav-eval = "scripts.run_eval:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
